остальные контроллеры дописал и все поправил